<resources>
    <string name="app_name">Bringx</string>

    <string name="str_call_operator">Call operator</string>
    <string name="str_pickup_delivery_rej_by_customer">Pick-up/delivery rejected by customer</string>
    <string name="str_pickup_delivery_not_possible_driver">Pick-up/delivery not possible for driver</string>
    <string name="str_exit_app">Exit</string>

    <string name="msg_alert_title">Phone GPS is disabled</string>
    <string name="msg_alert_ask_permission">GPS is required for tracking. Do you want to go to the Settings menu and enable it?</string>
    <string name="msg_alert_label_settings">Settings</string>
    <string name="msg_alert_cancel">Cancel</string>
    <string name="msg_alert_confirmation_title">Confirmation</string>
    <string name="msg_alert_login_error">Failure</string>
    <string name="msg_alert_no_jobs_msg">There are no more jobs in queue</string>
    <string name="msg_alert_information_title">Information</string>

    <string name="operator_phone_number">+49 176 8046 8925</string>
    <string name="lbl_login_button">Login</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_login">Driver login</string>

    <string name="lbl_login_in_progress">Login in progress</string>
    <string name="btn_ok">OK</string>
    <string name="title_activity_meetings">MeetingsActivity</string>

    <string name="action_settings">Settings</string>
    <string name="str_logout">Logout</string>
    <string name="btn_cancel">Cancel</string>
    <string name="msg_exit_app">Are you sure you want to exit?</string>
    <string name="msg_logout_app">Are you sure you want to logout?</string>
    <string name="msg_rejected_customer">Are you sure you want to mark the meeting as \'rejected\'?\nPlease fill in the reason below:</string>
    <string name="str_meeting_eta">ETA</string>
    <string name="str_meeting_destination">Dest.</string>
    <string name="str_meeting_details">Detail</string>
    <string name="str_meeting_info">Info</string>
    <string name="str_meeting_notes">Notes</string>
    <string name="no_phone_details">No phone number available</string>
    <string name="lbl_btn_arrived">Arrived</string>
    <string name="lbl_btn_loaded">Loaded</string>
    <string name="lbl_btn_done">Done</string>
    <string name="str_meeting_next">Next</string>
    <string name="str_meeting_to">To</string>
    <string name="str_meeting_from">From</string>
    <string name="str_meeting_pay">Pay</string>
    <string name="msg_alert_getting_jobs">Retrieving jobs</string>
    <string name="msg_alert_no_internet_connection">The application requires an active Internet connection to work. Please check your settings</string>
    <string name="msg_alert_first_meeting_changed">Your current meeting has changed. Please acknowledge the changes.</string>
    <string name="lbl_fill_rejected_reason">Please fill in the reason below:</string>
    <string name="msg_alert_meetings_error">Error</string>
    <string name="msgAnyComments">Any comments?</string>
    <string name="msg_alert_warning_title">Warning</string>
</resources>
