<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
   >

    <item
        android:icon="@drawable/dots"
        android:orderInCategory="11111"
        android:title=""
        app:showAsAction="always">

        <menu android:id="@+id/menu_items"
            tools:context="com.rinf.bringx.Views.LoginActivity"
            >
            <item
                android:id="@+id/action_call_operator"
                android:orderInCategory="100"
                android:title="@string/str_call_operator"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_rejected_customer"
                android:orderInCategory="101"
                android:title="@string/str_pickup_delivery_rej_by_customer"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_not_possible_driver"
                android:orderInCategory="102"
                android:title="@string/str_pickup_delivery_not_possible_driver"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_logout"
                android:orderInCategory="103"
                android:title="@string/str_logout"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_exit_app"
                android:orderInCategory="104"
                android:title="@string/str_exit_app"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>
