<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip">

            <!-- View Title Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:text="@string/lbl_login"
                android:textSize="25sp"
                android:textStyle="bold" />
            <!-- Email Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_username" />
            <!-- Email TextField -->

            <EditText
                android:id="@+id/loginUserName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <!-- Password Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/lbl_password" />
            <!-- Password TextField -->

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <!-- Error message -->

            <TextView
                android:id="@+id/login_error"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:textColor="#e30000"
                android:textStyle="bold" />

            <!-- Login Button -->
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dip"
            android:text="@string/lbl_login_button" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_meetings"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </RelativeLayout>

</RelativeLayout>
